--- a/clientes.html
+++ b/clientes.html
@@ -3,23 +3,161 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Clientes — Jurix & Sistem</title>
+  <title>JURIX & SISTEM S.A.S. — Inicio</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Main CSS -->
+  <!-- Main CSS (mantén o reemplaza assets/css/style.css con el que te entregué) -->
   <link rel="stylesheet" href="assets/css/style.css" />
+
+  <!-- Small header-specific styles to ensure the circle logo, hero full-screen and menu layout -->
+  <style>
+    /* Header layout adjustments */
+    .header-top {
+      background: #000;
+      color: #fff;
+      padding: 18px 0 10px;
+    }
+    .brand-row { display:flex; align-items:center; gap:18px; }
+    .logo-circle {
+      width: 96px;
+      height: 96px;
+      border-radius: 50%;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background: transparent;
+      border: 4px solid rgba(205,170,109,0.95); /* dorado medio */
+      box-shadow: 0 6px 18px rgba(0,0,0,0.35);
+      overflow:hidden;
+      flex-shrink:0;
+    }
+    .logo-circle img {
+      width:78%;
+      height:auto;
+      display:block;
+    }
+     /* Titulo principal Jurix & Sistem SAS */
+    .brand-title { line-height:1; }
+    .brand-title h1 {
+      margin:0;
+      font-size:30px; /* tamaño A */
+      color: #CDAA6D; /* dorado */
+      font-weight:700;
+      letter-spacing:0.6px;
+    }
+    
+    /* Subtitulo principal Consultorias */
+    .brand-title p { 
+      margin:0;
+      font-size:14px;
+      color:#ffffff;
+      opacity:0.95;
+      margin-top:4px;
+      letter-spacing:1px;
+    }
+
+    /* Menu row (white bg with blue bottom border) */
+    .menu-row {
+      background:#fff;
+      border-bottom:3px solid #2E86C1; /* azul TOV */
+    }
+    .menu-row .nav-link {
+      color:#000;
+      font-weight:600;
+      padding:10px 12px;
+    }
+    .menu-row .nav-link:hover {
+      color:#2E86C1;
+      background:transparent;
+    }
+
+    /* Hero full-screen */
+    .hero {
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      padding: 40px 0;
+      background: linear-gradient(180deg, #0E2A48 0%, #061628 70%); /* degradado azul petróleo -> azul oscuro */
+      color:#fff;
+    }
+    .hero .left {
+      max-width: 630px;
+    }
+    .hero h2 {
+      font-size:40px;
+      color:#F5F5F5;
+      margin-bottom:12px;
+      line-height:1.05;
+    }
+    .hero p.lead {
+      color: #e6eef6;
+      font-size:16px;
+      margin-bottom:20px;
+    }
+    .btn-primary-cta {
+      background:#CDAA6D;
+      border: 2px solid rgba(205,170,109,0.95);
+      color:#021226;
+      font-weight:700;
+      padding:12px 20px;
+      border-radius:8px;
+    }
+    .btn-primary-cta:hover { background:#b79856; color:#021226; }
+
+    .hero .right img{
+      width:100%;
+      height:auto;
+      border-radius:12px;
+      box-shadow: 0 12px 36px rgba(2,10,24,0.6);
+    }
+
+    /* Cards */
+    .cards { margin-top:26px; display:grid; grid-template-columns:repeat(auto-fit, minmax(210px,1fr)); gap:18px;}
+    .service-card {
+      background:rgba(255,255,255,0.04);
+      border:1px solid rgba(255,255,255,0.06);
+      padding:18px;
+      border-radius:12px;
+      color:#eef6ff;
+      min-height:110px;
+    }
+    .service-card h3 { color:#CDAA6D; margin-bottom:8px; font-size:18px; }
+    .service-card p { color:#dbeaf8; font-size:14px; }
+
+    /* Why choose us */
+    .why { padding:48px 0; background:#fff; color:#222; border-top:1px solid #eef2f6; border-bottom:1px solid #eef2f6; }
+    .why h3 { color: #0D3B66; margin-bottom:14px; }
+
+    /* Footer */
+    .site-footer {
+      background:#000;
+      color:#CDAA6D;
+      padding:22px 0;
+      margin-top:30px;
+    }
+
+    /* Responsive tweaks */
+    @media (max-width:992px) {
+      .brand-row { gap:12px; }
+      .logo-circle { width:76px; height:76px; border-width:3px; }
+      .brand-title h1 { font-size:22px; }
+      .hero h2 { font-size:28px; }
+      .hero { padding:30px 0; }
+    }
+  </style>
 </head>
 <body>
 
-  <!-- HEADER igual que index -->
+  <!-- HEADER (copiado del index para consistencia) -->
   <header class="header-top">
     <div class="container">
       <div class="brand-row">
         <div class="logo-circle">
           <img src="assets/img/logo.png" alt="Jurix & Sistem logo">
         </div>
+
         <div class="brand-title">
           <h1>JURIX & SISTEM S.A.S.</h1>
           <p>CONSULTORÍAS</p>
@@ -27,6 +165,7 @@
       </div>
     </div>
 
+    <!-- MENU -->
     <div class="menu-row">
       <div class="container">
         <nav class="d-flex justify-content-center align-items-center py-2">
@@ -34,8 +173,8 @@
           <a class="nav-link" href="nosotros.html">Nosotros</a>
 
           <div class="nav-item dropdown mx-2">
-            <a class="nav-link dropdown-toggle" href="#" id="serviciosDropdown" role="button" data-bs-toggle="dropdown">Servicios</a>
-            <ul class="dropdown-menu">
+            <a class="nav-link dropdown-toggle" href="#" id="serviciosDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Servicios</a>
+            <ul class="dropdown-menu" aria-labelledby="serviciosDropdown">
               <li><a class="dropdown-item" href="juridicos.html">Jurídicos</a></li>
               <li><a class="dropdown-item" href="tecnologicos.html">Tecnológicos</a></li>
             </ul>
@@ -48,70 +187,101 @@
     </div>
   </header>
 
-
-  <!-- HERO tipo index -->
-  <section class="hero">
+  <!-- HERO / BANNER -->
+  <section class="page-hero">
     <div class="container">
       <div class="row align-items-center">
-        
-        <div class="col-lg-7 left">
-          <h2>Nuestros Clientes y Casos de Éxito</h2>
-          <p class="lead">
-            Trabajamos con organizaciones del sector público y privado, brindando soluciones integradas en derecho y tecnología.
+        <div class="col-lg-8">
+          <h2 style="color:#F5F5F5; font-size:34px; margin-bottom:8px;">Nuestros Clientes y Casos de Éxito</h2>
+          <p style="color:#dbeaf8; font-size:15px; margin-bottom:18px;">
+            Con orgullo trabajamos con organizaciones del sector público y privado en la región Caribe y todo Colombia, brindando soluciones integradas en derecho y tecnología.
           </p>
           <a href="contacto.html" class="btn btn-primary-cta">Solicitar consulta</a>
         </div>
 
-        <div class="col-lg-5 right mt-4 mt-lg-0 text-center text-lg-end">
-          <img src="assets/img/hero-clientes.png" alt="Clientes Jurix & Sistem">
+        <div class="col-lg-4 text-lg-end mt-4 mt-lg-0">
+          <!-- Pequeña tarjeta resumen -->
+          <div class="case-study">
+            <strong style="color:#0D3B66; font-size:16px;">Proyectos recientes</strong>
+            <p style="margin:6px 0 0; color:#375b82;">Implementación de políticas de protección de datos y monitoreo de redes en universidades y empresas.</p>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-
-  <!-- CLIENTES logos -->
+  <!-- CLIENTES: logos -->
   <section class="container my-5">
-    <div class="text-center mb-3">
-      <h3 style="color:#0D3B66;">Organizaciones que han confiado en nosotros</h3>
-      <p style="color:#374d63;">(Logos de ejemplo — reemplaza por logos reales)</p>
-    </div>
+    <div class="row">
+      <div class="col-12 text-center mb-3">
+        <h3 style="color:#0D3B66;">Algunas organizaciones que nos han confiado sus proyectos</h3>
+        <p style="color:#374d63;"></p>
+      </div>
 
-    <div class="clients-grid">
-      <div class="client-card"><img src="assets/img/clients/cliente1.png" alt=""></div>
-      <div class="client-card"><img src="assets/img/clients/cliente2.png" alt=""></div>
-      <div class="client-card"><img src="assets/img/clients/cliente3.png" alt=""></div>
-      <div class="client-card"><img src="assets/img/clients/cliente4.png" alt=""></div>
-      <div class="client-card"><img src="assets/img/clients/cliente5.png" alt=""></div>
-      <div class="client-card"><img src="assets/img/clients/cliente6.png" alt=""></div>
+      <div class="col-12">
+        <div class="clients-grid">
+          <!-- Subir logos a assets/img/clients/cliente1.png etc -->
+          <div class="client-card"><img src="assets/img/clients/cliente1.png" alt="Cliente 1"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente2.png" alt="Cliente 2"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente3.png" alt="Cliente 3"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente4.png" alt="Cliente 4"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente5.png" alt="Cliente 5"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente6.png" alt="Cliente 6"></div>
+        </div>
+      </div>
     </div>
   </section>
 
-
-  <!-- TESTIMONIOS -->
+  <!-- CASOS DE ÉXITO / TESTIMONIOS -->
   <section class="container my-4">
     <div class="row g-4">
+      <div class="col-lg-6">
+        <div class="case-study">
+          <h4 style="color:#0D3B66;">Caso: Universidad - Seguridad de la Información</h4>
+          <p>Implementamos un plan integral de protección de datos y monitoreo de la infraestructura, reduciendo incidentes y mejorando cumplimiento normativo.</p>
+          <p style="font-weight:600; margin-top:8px;">Resultado: mejora operativa y reducción de riesgo legal.</p>
+        </div>
+      </div>
+
+      <div class="col-lg-6">
+        <div class="case-study">
+          <h4 style="color:#0D3B66;">Caso: Empresa comercial - Soporte y continuidad</h4>
+          <p>Contrato de mantenimiento preventivo y correctivo para 50 puestos de trabajo, administración de redes y backup automatizado.</p>
+          <p style="font-weight:600; margin-top:8px;">Resultado: disponibilidad 24/7 y reducción de tiempos de inactividad.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Testimonios (opcional) -->
+  <section class="container my-4">
+    <div class="row">
+      <div class="col-12 text-center mb-3">
+        <h3 style="color:#0D3B66;">Testimonios</h3>
+      </div>
+
       <div class="col-md-4">
         <div class="case-study">
           <p>"Jurix & Sistem nos ayudó a adaptar nuestras políticas de datos con rapidez y claridad."</p>
-          <strong>— Gerente TI, Cliente A</strong>
+          <p style="font-weight:700; margin-bottom:0;">— Gerente TI, Cliente A</p>
         </div>
       </div>
+
       <div class="col-md-4">
         <div class="case-study">
           <p>"La respuesta del equipo ante un incidente fue excelente; mitigaron riesgos y nos guiaron legalmente."</p>
-          <strong>— Directora de Operaciones, Cliente B</strong>
+          <p style="font-weight:700; margin-bottom:0;">— Directora de Operaciones, Cliente B</p>
         </div>
       </div>
+
       <div class="col-md-4">
         <div class="case-study">
           <p>"Profesionales con experiencia en derecho y tecnología: soluciones prácticas y ejecutables."</p>
-          <strong>— CEO, Cliente C</strong>
+          <p style="font-weight:700; margin-bottom:0;">— CEO, Cliente C</p>
         </div>
       </div>
     </div>
   </section>
-
 
   <!-- CTA final -->
   <section class="container my-5">
@@ -120,10 +290,11 @@
         <strong style="font-size:18px">¿Quiere que colaboremos con su empresa?</strong>
         <div style="color:#d3e7fb; margin-top:6px;">Solicite una reunión técnica o una propuesta a la medida.</div>
       </div>
-      <div><a class="cta-btn" href="contacto.html">Solicitar reunión</a></div>
+      <div>
+        <a href="contacto.html" class="cta-btn">Solicitar reunión</a>
+      </div>
     </div>
   </section>
-
 
   <!-- FOOTER -->
   <footer class="site-footer">
